# TubongeApp

./: .gitignore  README.md
backend/: .pre-commit-config.yaml  poetry.toml  pyproject.toml
backend/src/: main.py
frontend/: package.json  pnpm-lock.yaml
